# adventofcode

./: .gitignore  README.md
2018/: day01.clj  day01.cljs  day03.clj  day04.clj  (+1 more)
2021/python/: Makefile  pyproject.toml
2021/python/aoc2021/eight/: eight.py
2021/python/aoc2021/eight/tests/: test_eight.py
2021/python/aoc2021/eighteen/: eighteen.py
2021/python/aoc2021/eighteen/tests/: test_eighteen.py
2021/python/aoc2021/eleven/: eleven.py
2021/python/aoc2021/eleven/tests/: test_eleven.py
2021/python/aoc2021/fifteen/: fifteen.py
2021/python/aoc2021/fifteen/tests/: test_fifteen.py
2021/python/aoc2021/five/: five.py
2021/python/aoc2021/five/tests/: test_five.py
2021/python/aoc2021/four/: four.py
2021/python/aoc2021/four/tests/: test_four.py
2021/python/aoc2021/fourteen/: fourteen.py
2021/python/aoc2021/fourteen/tests/: test_fourteen.py
2021/python/aoc2021/lib/: input.py
2021/python/aoc2021/nine/: nine.py
2021/python/aoc2021/nine/tests/: test_nine.py
2021/python/aoc2021/nineteen/: nineteen.py
2021/python/aoc2021/nineteen/tests/: test_nineteen.py
2021/python/aoc2021/one/: main.py  one.py
2021/python/aoc2021/one/tests/: test_foo.py  test_one.py
2021/python/aoc2021/seven/: seven.py
2021/python/aoc2021/seven/tests/: test_seven.py
2021/python/aoc2021/seventeen/: seventeen.py
2021/python/aoc2021/seventeen/tests/: test_seventeen.py
2021/python/aoc2021/six/: six.py
2021/python/aoc2021/six/tests/: test_six.py
2021/python/aoc2021/sixteen/: sixteen.py
2021/python/aoc2021/sixteen/tests/: test_sixteen.py
2021/python/aoc2021/template/: foo.py
2021/python/aoc2021/template/tests/: test_foo.py
2021/python/aoc2021/ten/: ten.py
2021/python/aoc2021/ten/tests/: test_ten.py
2021/python/aoc2021/thirteen/: thirteen.py
2021/python/aoc2021/thirteen/tests/: test_thirteen.py
2021/python/aoc2021/three/: three.py
2021/python/aoc2021/three/tests/: test_three.py
2021/python/aoc2021/twelve/: twelve.py
2021/python/aoc2021/twelve/tests/: test_twelve.py
2021/python/aoc2021/twenty/: twenty.py
2021/python/aoc2021/twenty/tests/: test_twenty.py
2021/python/aoc2021/twentyone/: twentyone.py
2021/python/aoc2021/twentyone/tests/: test_twentyone.py
2021/python/aoc2021/twentytwo/: twentytwo.py
2021/python/aoc2021/twentytwo/tests/: test_twentytwo.py
2021/python/aoc2021/two/: two.py
2021/python/aoc2021/two/tests/: test_two.py
2023/python/: Makefile  Prompt.txt  pyproject.toml
2023/python/aoc2023/one/: main.py
2023/python/aoc2023/one/tests/: test_funcs.py  test_one.py
2023/python/aoc2023/three/: main.py  transcript.md
2023/python/aoc2023/three/tests/: test_funcs.py
2023/python/aoc2023/two/: main.py
2023/python/aoc2023/two/tests/: test_funcs.py
(+81 files in other folders)
