[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["David Creemer <david@zachary.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
black = "^21.9b0"
flake8 = "^3.9"
flake8-bandit = "^2.1"
flake8-isort = "^4.0.0"
isort = "^5.9"
mypy = "^0.910"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^6"
safety = "^1.10"

[tool.poetry.scripts]
one = "aoc2021.one.one:main"
two = "aoc2021.two.two:main"
three = "aoc2021.three.three:main"
four = "aoc2021.four.four:main"
five = "aoc2021.five.five:main"
six = "aoc2021.six.six:main"
seven = "aoc2021.seven.seven:main"

[tool.pytest.ini_options]
minversion = "6.0"

[tool.flake8]
max-line-length = "105"
# (S101 don't warn about using asserts in test code)
# (E501 don't warn about ling length)
per-file-ignores = "tests/*:E501,S101 */tests/*:E501,S101"

[tool.autopep8]
max_line_length = 105

[tool.black]
line-length = 105
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"
strict = true
warn_return_any = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
