[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = "Advent of Code 2023"
authors = ["D Creemer <dcreemer@sfba.social>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
coverage = { extras = ["toml"], version = "^7.3" }
mypy = "^1.5"
pytest = "^7.4"
pytest-cov = "^4.1"
ruff = "^0.1.6"
safety = "^2.3"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=aoc2023 --cov-report html --cov-report term"

[tool.black]
line-length = 105
target-version = ["py311"]
preview = true

[tool.ruff]
line-length = 105
src = ["src", "tests"]
select = [
  "B",   # bugbear
  "C90", # mccabe
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8 naming
  "PT",  # pytest style
  "RUF", # ruff
  "S",   # bandit
  "SIM", # simplify
  "UP",  # pyupgrade
  "W",   # Warnings
]

[tool.ruff.per-file-ignores]
# (S101 don't warn about using asserts in test code)
"**/tests/*.py" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 8

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"
strict = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
